# MC855

./: .gitignore  .gitmodules  agent.py  client.py  env.py  utils.py
client/: client.ipynb  client.py  server.py
server/: server.py
uavfl/: README.md  clientapp.Dockerfile  pyproject.toml  serverapp.Dockerfile
uavfl/uavfl/: __init__.py  agent.py  client.ipynb  client_app.py  env.py  env_wrapper.py  loader.py  server_app.py  task.py
